# add_subdirectory(math)

# add_library(ministl STATIC ${ALL_OBJECT_FILES})

# set(MINISTL_LIBS
#     cmath
# )
# target_link_libraries(
#     ministl
#     ${MINISTL_LIBS}
# )

# target_include_directories(
#         ministl PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
#         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
